--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,26 +2,28 @@ Package: webmiddens
 Title: Cache Mocked 'HTTP' Requests
 Description: Cache mocked 'HTTP' requests, leveraging 'webmockr'
     for the 'HTTP' request matching.
-Version: 0.0.1.9130
+Version: 0.0.2.91
 Authors@R: c(
-    person("Scott", "Chamberlain", role = c("aut", "cre"), email =
-    "sckott@protonmail.com", comment = c(ORCID="0000-0003-1444-9135")),
+    person("Scott", "Chamberlain", role = c("aut", "cre"),
+        email = "sckott@protonmail.com", 
+        comment = c(ORCID="0000-0003-1444-9135")),
     person("rOpenSci", role = "fnd", comment = "https://ropensci.org")
     )
 License: MIT + file LICENSE
-URL: https://github.com/ropenscilabs/webmiddens
+URL: https://github.com/ropenscilabs/webmiddens (devel)
+    https://docs.ropensci.org/webmiddens/ (docs)
 BugReports: https://github.com/ropenscilabs/webmiddens/issues
 LazyData: true
 Encoding: UTF-8
+Language: en-US
 Roxygen: list(markdown = TRUE)
 Imports:
     R6,
     webmockr,
     hoardr
 Suggests:
-    roxygen2 (>= 6.1.1),
     testthat
-RoxygenNote: 6.1.1
+RoxygenNote: 7.0.2
 X-schema.org-applicationCategory: Web
-X-schema.org-keywords: http, https, API, web-services, curl, mock, mocking, fakeweb, http-mocking, testing, testing-tools, tdd
+X-schema.org-keywords: http, https, API, curl, mock, mocking, fakeweb, http-mocking, testing, testing-tools, tdd
 X-schema.org-isPartOf: https://ropensci.org
