--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,7 +27,7 @@ environment:
     - R_VERSION: devel
       R_ARCH: x64
       _R_CHECK_LENGTH_1_LOGIC2_: verbose
-      USE_RTOOLS: true
+      USE_RTOOLS: false
 
 artifacts:
   - path: '*.Rcheck\**\*.log'
