add functions wm_disable, wm_enable and wm_enabled change use_midden to check if webmiddens enabled or not, and if not, pass through code block

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,9 @@ export(midden_kill)
 export(midden_path)
 export(use_midden)
 export(wm_configuration)
+export(wm_disable)
+export(wm_enable)
+export(wm_enabled)
 importFrom(R6,R6Class)
 importFrom(hoardr,hoard)
 importFrom(webmockr,build_crul_response)
