#13 trying out callr::r_bg for the cache_stub() fxn in midden class idea is that with large payloads this will make a big difference if in fact r_bg will spin off a new R session to write the data to disk while we can return the R object in the users session

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Roxygen: list(markdown = TRUE)
 Imports:
     R6,
     webmockr (>= 0.6.2.92),
-    hoardr
+    hoardr,
+    callr
 Suggests:
     testthat,
     jsonlite,
