--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(wm_disable)
 export(wm_enable)
 export(wm_enabled)
 importFrom(R6,R6Class)
+importFrom(callr,r_bg)
 importFrom(hoardr,hoard)
 importFrom(webmockr,build_crul_response)
 importFrom(webmockr,disable)
