--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,9 @@ Authors@R: c(
     person("rOpenSci", role = "fnd", comment = "https://ropensci.org")
     )
 License: MIT + file LICENSE
-URL: https://github.com/ropenscilabs/webmiddens (devel)
+URL: https://github.com/ropensci/webmiddens (devel)
     https://docs.ropensci.org/webmiddens/ (docs)
-BugReports: https://github.com/ropenscilabs/webmiddens/issues
+BugReports: https://github.com/ropensci/webmiddens/issues
 LazyData: true
 Encoding: UTF-8
 Language: en-US
